[gd_scene load_steps=11 format=2]

[ext_resource path="res://Buttons/Buttons Sprites/exit.png" type="Texture" id=1]
[ext_resource path="res://Buttons/Buttons Sprites/play.png" type="Texture" id=2]
[ext_resource path="res://Buttons/Buttons Sprites/pause.png" type="Texture" id=3]
[ext_resource path="res://Menu/Scripts/UserInterface.gd" type="Script" id=4]
[ext_resource path="res://Interior/Interiors_free/32x32/Room_Builder_free_32x32.png" type="Texture" id=5]
[ext_resource path="res://Fontes/Stacked pixel.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonte/ThaleahFat.ttf"

[sub_resource type="DynamicFont" id=10]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=12]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="TileSet" id=11]
0/name = "Room_Builder_free_32x32.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Room_Builder_free_32x32.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Room_Builder_free_32x32.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 64, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Room_Builder_free_32x32.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 64, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Room_Builder_free_32x32.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 352, 64, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
7/name = "Room_Builder_free_32x32.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 416, 64, 18, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Room_Builder_free_32x32.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 384, 96, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Room_Builder_free_32x32.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 385, 96, 31, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 280.7
margin_top = 12.2825
margin_right = 310.7
margin_bottom = 36.2825
icon = ExtResource( 3 )
flat = true

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 0.784314 )

[node name="Label" type="Label" parent="PauseMenu"]
margin_left = 112.0
margin_top = 64.0
margin_right = 207.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 10 )
text = "Pausado"
align = 1

[node name="ResumeButton" type="Button" parent="PauseMenu"]
margin_left = 128.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 128.0
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="ExitButton" type="Button" parent="PauseMenu"]
margin_left = 11.0
margin_top = 13.0
margin_right = 41.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 12 )
text = "MENU"
icon = ExtResource( 1 )
flat = true

[node name="Borda" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 18, 2, 0, 65554, 4, 0, 131072, 7, 0, 131090, 4, 0, 196608, 7, 0, 196626, 4, 0, 262144, 7, 0, 262162, 4, 0, 327680, 7, 0, 327698, 4, 0, 393216, 7, 0, 393234, 4, 0, 458752, 7, 0, 458770, 4, 0, 524288, 7, 0, 524306, 4, 0, 589824, 7, 0, 589842, 4, 0, 655360, 1073741827, 0, 655378, 1073741826, 0, 720897, 1073741833, 0, 720898, 1073741833, 0, 720899, 1073741833, 0, 720900, 1073741833, 0, 720901, 1073741833, 0, 720902, 1073741833, 0, 720903, 1073741833, 0, 720904, 1073741833, 0, 720905, 1073741833, 0, 720906, 1073741833, 0, 720907, 1073741833, 0, 720908, 1073741833, 0, 720909, 1073741833, 0, 720910, 1073741833, 0, 720911, 1073741833, 0, 720912, 1073741833, 0, 720913, 1073741833, 0 )

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/ExitButton" to="." method="_on_ExitButton_pressed"]
